Created CTests for existing examples

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,10 +7,18 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-add_executable(sedona_tests main.cpp 2Rot1Pris/test_2rot1pris.cpp 2Rot1Pris/codegen/doublePendulumDerivative_terminate.cpp
-        2Rot1Pris/codegen/doublePendulumDerivative.cpp
-        2Rot1Pris/codegen/doublePendulumDerivative_data.cpp
-        2Rot1Pris/codegen/doublePendulumDerivative_initialize.cpp
-        2Rot1Pris/codegen/rt_nonfinite.cpp
-        2Rot1Pris/codegen/rtGetInf.cpp
-        2Rot1Pris/codegen/rtGetNaN.cpp)
+enable_testing()
+
+add_executable(sedona_2r1p_tests    2Rot1Pris/test_2rot1pris.cpp
+                                    2Rot1Pris/codegen/doublePendulumDerivative_terminate.cpp
+                                    2Rot1Pris/codegen/doublePendulumDerivative.cpp
+                                    2Rot1Pris/codegen/doublePendulumDerivative_data.cpp
+                                    2Rot1Pris/codegen/doublePendulumDerivative_initialize.cpp
+                                    2Rot1Pris/codegen/rt_nonfinite.cpp
+                                    2Rot1Pris/codegen/rtGetInf.cpp
+                                    2Rot1Pris/codegen/rtGetNaN.cpp)
+
+
+add_test(
+        Test1 sedona_2r1p_tests
+)
