--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 project(sedona_tests CXX)
 
 set(CMAKE_CXX_STANDARD 20)
-
+set( CMAKE_CXX_FLAGS "-std=c++2a" )
 include_directories(include)
 
 enable_testing()
